--- a/pacman/Form1.resx
+++ b/pacman/Form1.resx
@@ -60,4 +60,28 @@
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIABBBAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
+        ck5UAc+id5oAAAP7SURBVHja7dw7joUwFERB9r9hvjYQERHRICyo1px4Em69zF1n0dZ1/9PlfEEGAACY
+        AQAAZgAAgBkAAGAGAACYAQAAZgAAgBkAAGAGAACYAQAAZgAAgBkAAGAGAACYAQAAZgAAgDlACUAAkAAA
+        AAkAABAADAACgAFAADAACAAGAAHAACAAGAAEAAOAAGAAEAAMAAKAAUAAMAAIAAYAAcAcsABiABAADAAC
+        gAFAADAACAAGAAEAABIAACABAAASAAAgAQAAEgAAIAEAABIAACABAAASAAAgAcAB66eVsBoW/X8ASAAA
+        gAQAAEgAAIAEAABIAACABAAASAAAgAQAAEgAAIAAAAAACAAAAIAAAAAACAAAAIAAAAAACAAAAIA+esBL
+        kid5ACAAGAAEAAOAAGAAEAAMAAKAAUAAMAAIAAYAAcAAIACYD1gAAIAEAABIAACABAAASAAAgAQAB6yH
+        GsOWsOhBDT+hABAADAACgAFAADAACAAGAAHAACAAGAAEAAOAAGAAEAAMAAAAgAEAAAAwAAAAAAYAAADA
+        AAAAABgAAAAAA0Cj1TdzAQBwhAAwAAgABgABwAAgABgABAADgABgABAADAACgAFAADAACAAGAAHAACAA
+        GAAEAAOAAGAAEAAMADptSvIFGwAAYAYAAJgBAABmAACAGQAAYAYAAJgBAABmAACAGQAAYABwhAAwAAgA
+        BgABwAAgABgABAADgABgANAjlTAPghgAAAAAAwAAAGAAAAAADAAAAIABAAAAMAAAAAAGAAAAwAAAAAAY
+        AABgABAADAACgAFAADAACAAGAAHAACAAGADUXkNYfTMXCAABwAAgABgABAADgABgABAADAACgAFAADAA
+        CAAGAAHAAAAAABgAAAAAAwAAAGAAAAAADAAAAIABAAAAMICoyeYwAAFAAAAAAAQAAABAAAAAAAQAAABA
+        AAAAAAQAAABAAAAAAAQAAABAADAACAAGAAHAACAAGAAEAAOAAGAAEAAMAPpefVgEGAAkAABAAgAAJAAA
+        QAIAACQAAEACAAAkAABAAgAAJAAAQAIAACQAAEACAAAkAABAAgAAJAAARLo/L4IAQAAwAAgABgABwAAg
+        ABgABAADgABgABAADAACgAFAADAfkQAAAAkAAJAAAAAJAACQAAAACQAGEDlgA4AAYAAQAAwAAgAAJAAA
+        QAIAACQAAEACAAAkAABAAgAAJAAAQAIAAAQAA4AAYAAQAAwAAoAZgBygGQAAYAYAAJgBAABmAACAGQAA
+        YAAQAAwAAoABQAAwAAgABgABwAAgABgABAADgABgABAADAAAMDMzMzMzMzMzMzMzMzMzMzMzMzMzMzMz
+        MzMzMzMzMzOzYxunkzmsoE1SRAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
